rivista java native interface
rivisto metodo jInvoke di Vm
rivisto metodo JGetSet di Vm
rivisto metodo getExecutable di Utility
definito metodo equals in Utility
rivisto metodo toString di Cons
rivisto testJni.lsp